cabal-version: 3.0
name: elevator
version: 0.0.0.0

executable elevator
  main-is:             Main.lhs
  build-depends:       base
                     , monad-control
                     , mtl
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
